<resources>
    <string name="app_name">Lémbramo</string>

    <string name="hello_world">Benvido á aplicación</string>
    <string name="action_settings">Preferencias</string>
    <string name="album_name">lembramo</string>

    <string name="btn_medicines">Medicamentos</string>
    <string name="title_activity_medicines">Medicamentos</string>
    <string name="act_medicamentos">Gestión de medicamentos</string>

    <string name="hint_nombre">Escribe un nombre de medicamento...</string>
    <string name="lbl_fotocaja">Foto caja</string>
    <string name="lbl_fotomedicamento">Foto medicamento</string>
    <string name="hint_comentario">Escribe un comentario...</string>
    <string name="content_description">Imagen</string>

    <string name="title_new_medicine">Nuevo medicamento</string>
    <string name="title_edit_medicine">Editar medicamento</string>
    <string name="title_activity_image_zoom">Ampliación de imagen</string>
    <string name="title_activity_alarm">Alarma de toma de medicamento</string>
    <string name="alarm_description">Encender/apagar alarma</string>

    <string name="action_save">Guardar</string>
    <string name="action_delete">Borrar</string>
    <string name="action_select_image">Escoger imagen de galería</string>
    <string name="action_take_photo">Sacar foto</string>
    <string name="action_delete_image">Borrar imagen</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>

    <string name="error_db_toast">Error al abrir base de datos</string>
    <string name="ok_db_toast">Guardado con éxito</string>
    <string name="no_medicament">No hay ningún medicamento</string>

    <string name="lbl_initial_date">Fecha de inicio</string>
    <string name="lbl_frecuency">Frecuencia y duración</string>
    <string name="lbl_schedule">Horario y dosis</string>
    <string name="no_schedule">No hay planificación</string>
    <string name="lbl_initial_hour">Hora de inicio</string>
    <string name="scheduler_wizard">Asistente para planificar el horario</string>

    <string name="lbl_meal_times">Horas de las comidas</string>
    <string name="lbl_breakfast">Desayuno</string>
    <string name="lbl_lunch">Comida</string>
    <string name="lbl_dinner">Cena</string>
    <string name="lbl_times_a_day">veces al día</string>
    <string name="lbl_hours">horas</string>
    <string name="lbl_each">Cada</string>
    <string name="lbl_with_meals">Con las comidas</string>
    <string name="default_breakfast_time">08:00</string>
    <string name="default_lunch_time">14:00</string>
    <string name="default_dinner_time">21:00</string>

    <string name="required">Campo requerido</string>
    <string name="more_fields_required">Faltan datos por completar</string>
    <string name="schedule_required">Debe establecer la planificación horaria</string>

    <string name="intake_alarm">Tomar el medicamento</string>
    <string name="swipe_alarm">Deslice para apagar la alarma</string>
    <string name="intake_done">Medicamento tomado</string>
    <string name="lbl_dose">Dosis</string>
</resources>
